--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "948aca9e",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mirna.saad\\AppData\\Local\\Temp\\ipykernel_3352\\2573631928.py:107: FutureWarning: \n",
+      "C:\\Users\\mirna.saad\\AppData\\Local\\Temp\\ipykernel_27040\\2573631928.py:107: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -288,7 +288,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mirna.saad\\AppData\\Local\\Temp\\ipykernel_3352\\2573631928.py:193: FutureWarning: \n",
+      "C:\\Users\\mirna.saad\\AppData\\Local\\Temp\\ipykernel_27040\\2573631928.py:193: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "c7b1ecac",
    "metadata": {},
    "outputs": [
@@ -684,13 +684,425 @@
    "id": "280a5fb0",
    "metadata": {},
    "source": [
-    "# Recommendation system"
+    "# Content-based anime recommendation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f7c0785e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>type</th>\n",
+       "      <th>episodes</th>\n",
+       "      <th>rating_x</th>\n",
+       "      <th>members</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>rating_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32281</td>\n",
+       "      <td>Kimi no Na wa.</td>\n",
+       "      <td>[Drama, Romance, School, Supernatural]</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.37</td>\n",
+       "      <td>200630</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>32281</td>\n",
+       "      <td>Kimi no Na wa.</td>\n",
+       "      <td>[Drama, Romance, School, Supernatural]</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.37</td>\n",
+       "      <td>200630</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32281</td>\n",
+       "      <td>Kimi no Na wa.</td>\n",
+       "      <td>[Drama, Romance, School, Supernatural]</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.37</td>\n",
+       "      <td>200630</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32281</td>\n",
+       "      <td>Kimi no Na wa.</td>\n",
+       "      <td>[Drama, Romance, School, Supernatural]</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.37</td>\n",
+       "      <td>200630</td>\n",
+       "      <td>271.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32281</td>\n",
+       "      <td>Kimi no Na wa.</td>\n",
+       "      <td>[Drama, Romance, School, Supernatural]</td>\n",
+       "      <td>Movie</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.37</td>\n",
+       "      <td>200630</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   anime_id            name                                   genre   type  \\\n",
+       "0     32281  Kimi no Na wa.  [Drama, Romance, School, Supernatural]  Movie   \n",
+       "1     32281  Kimi no Na wa.  [Drama, Romance, School, Supernatural]  Movie   \n",
+       "2     32281  Kimi no Na wa.  [Drama, Romance, School, Supernatural]  Movie   \n",
+       "3     32281  Kimi no Na wa.  [Drama, Romance, School, Supernatural]  Movie   \n",
+       "4     32281  Kimi no Na wa.  [Drama, Romance, School, Supernatural]  Movie   \n",
+       "\n",
+       "   episodes  rating_x  members  user_id  rating_y  \n",
+       "0       1.0      9.37   200630     99.0       5.0  \n",
+       "1       1.0      9.37   200630    152.0      10.0  \n",
+       "2       1.0      9.37   200630    244.0      10.0  \n",
+       "3       1.0      9.37   200630    271.0      10.0  \n",
+       "4       1.0      9.37   200630    322.0      10.0  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = anime_df.merge(rating_df, how = \"left\", on = [\"anime_id\"])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "847dc283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anime_data = anime_df.copy()\n",
+    "ratings_data = rating_df.copy() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4d58716b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tabulate import tabulate\n",
+    "\n",
+    "# ======================\n",
+    "# 1. Data Preparation\n",
+    "# ======================\n",
+    "\n",
+    "def text_cleaning(text):\n",
+    "    \"\"\"Clean anime titles by removing special characters\"\"\"\n",
+    "    if not isinstance(text, str):\n",
+    "        return \"\"\n",
+    "    text = re.sub(r'&quot;', '', text)\n",
+    "    text = re.sub(r'.hack//', '', text)\n",
+    "    text = re.sub(r'&#039;', '', text)\n",
+    "    text = re.sub(r'A&#039;s', '', text)\n",
+    "    text = re.sub(r'I&#039;', 'I\\'', text)\n",
+    "    text = re.sub(r'&amp;', 'and', text)\n",
+    "    return text.strip()\n",
+    "\n",
+    "\n",
+    "# Clean data\n",
+    "anime_data['name'] = anime_data['name'].apply(text_cleaning)\n",
+    "anime_data['genre'] = anime_data['genre'].fillna('').astype(str)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4cef30b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                        Kimi no Na wa.\n",
+       "1                      Fullmetal Alchemist: Brotherhood\n",
+       "2                                              Gintama°\n",
+       "3                                           Steins;Gate\n",
+       "4                                               Gintama\n",
+       "5     Haikyuu!!: Karasuno Koukou VS Shiratorizawa Ga...\n",
+       "6                                Hunter x Hunter (2011)\n",
+       "7                                  Ginga Eiyuu Densetsu\n",
+       "8     Gintama Movie: Kanketsu-hen - Yorozuya yo Eien...\n",
+       "9                                    Gintama: Enchousen\n",
+       "10                                 Clannad: After Story\n",
+       "11                                       Koe no Katachi\n",
+       "12                                              Gintama\n",
+       "13                   Code Geass: Hangyaku no Lelouch R2\n",
+       "14                              Haikyuu!! Second Season\n",
+       "15                        Sen to Chihiro no Kamikakushi\n",
+       "16                              Shigatsu wa Kimi no Uso\n",
+       "17                        Mushishi Zoku Shou 2nd Season\n",
+       "18                         Ookami Kodomo no Ame to Yuki\n",
+       "19                      Code Geass: Hangyaku no Lelouch\n",
+       "20                                       Hajime no Ippo\n",
+       "21    Rurouni Kenshin: Meiji Kenkaku Romantan - Tsui...\n",
+       "22                                         Cowboy Bebop\n",
+       "23                                        One Punch Man\n",
+       "24                                        Mononoke Hime\n",
+       "Name: name, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anime_data['name'].head(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "da32bca8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import pandas as pd\n",
+    "from tabulate import tabulate\n",
+    "\n",
+    "# Split ratings into train and test sets\n",
+    "train_ratings, test_ratings = train_test_split(ratings_data, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Filter anime_data to only include anime present in the training ratings\n",
+    "train_anime_ids = train_ratings['anime_id'].unique()\n",
+    "train_anime_data = anime_data[anime_data['anime_id'].isin(train_anime_ids)].copy()\n",
+    "\n",
+    "# ======================\n",
+    "# Feature Engineering on Training Data\n",
+    "# ======================\n",
+    "\n",
+    "# Create TF-IDF matrix for genres\n",
+    "tfv = TfidfVectorizer(min_df=2, max_features=None, \n",
+    "                      strip_accents='unicode', analyzer='word',\n",
+    "                      token_pattern=r'\\w{1,}', ngram_range=(1, 3),\n",
+    "                      stop_words='english')\n",
+    "\n",
+    "tfv_matrix = tfv.fit_transform(train_anime_data['genre'])\n",
+    "\n",
+    "# Compute cosine similarity matrix\n",
+    "cosine_sim = cosine_similarity(tfv_matrix, tfv_matrix)\n",
+    "\n",
+    "# Create mapping between titles and indices\n",
+    "indices = pd.Series(train_anime_data.index, index=train_anime_data['name']).drop_duplicates()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "370047d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ======================\n",
+    "# Recommendation Function\n",
+    "# ======================\n",
+    "\n",
+    "def get_recommendations(title, cosine_sim=cosine_sim, anime_data=train_anime_data, indices=indices, top_n=5):\n",
+    "    if title not in indices:\n",
+    "        return pd.DataFrame()\n",
+    "    \n",
+    "    idx = indices[title]\n",
+    "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
+    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+    "    sim_scores = sim_scores[1:top_n+1]\n",
+    "    anime_indices = [i[0] for i in sim_scores]\n",
+    "    similarity_scores = [i[1] for i in sim_scores]\n",
+    "\n",
+    "    recommendations = anime_data.iloc[anime_indices].copy()\n",
+    "    recommendations['Similarity Score'] = similarity_scores\n",
+    "    return recommendations[['name', 'rating', 'genre', 'Similarity Score']].rename(columns={'name': 'Anime', 'rating': 'Rating'})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "819b8a22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ======================\n",
+    "# Evaluation Function\n",
+    "# ======================\n",
+    "\n",
+    "def evaluate_for_anime(anime_name, test_ratings, anime_data, cosine_sim, indices, top_n=5):\n",
+    "    if anime_name not in indices:\n",
+    "        similar = anime_data[anime_data['name'].str.contains(anime_name, case=False)]['name'].head(5).tolist()\n",
+    "        print(f\"\\n'{anime_name}' not found in database.\")\n",
+    "        if similar:\n",
+    "            print(\"Possible similar titles:\")\n",
+    "            for t in similar:\n",
+    "                print(f\"- {t}\")\n",
+    "        return\n",
+    "\n",
+    "    anime_id = anime_data[anime_data['name'] == anime_name]['anime_id'].values[0]\n",
+    "    high_raters = test_ratings[(test_ratings['anime_id'] == anime_id) & \n",
+    "                               (test_ratings['rating'] >= 7)]['user_id'].unique()\n",
+    "\n",
+    "    results = []\n",
+    "    for user_id in high_raters[:100]:  # Limit to first 100 users for speed\n",
+    "        user_likes = test_ratings[(test_ratings['user_id'] == user_id) &\n",
+    "                                  (test_ratings['rating'] >= 7) &\n",
+    "                                  (test_ratings['anime_id'] != anime_id)]['anime_id'].values\n",
+    "\n",
+    "        if len(user_likes) == 0:\n",
+    "            continue\n",
+    "\n",
+    "        recs = get_recommendations(anime_name, cosine_sim, anime_data, indices, top_n)\n",
+    "        if recs.empty:\n",
+    "            continue\n",
+    "\n",
+    "        rec_anime_ids = anime_data[anime_data['name'].isin(recs['Anime'])]['anime_id'].values\n",
+    "        relevant_recs = len(set(rec_anime_ids) & set(user_likes))\n",
+    "        precision = relevant_recs / top_n\n",
+    "\n",
+    "        results.append({\n",
+    "            'user_id': user_id,\n",
+    "            'precision': precision,\n",
+    "            'total_liked': len(user_likes)\n",
+    "        })\n",
+    "\n",
+    "    if not results:\n",
+    "        print(f\"\\nInsufficient data to evaluate '{anime_name}'\")\n",
+    "        return\n",
+    "\n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    print(f\"\\nEvaluation for '{anime_name}':\")\n",
+    "    print(f\"Users who liked this anime: {len(results_df)}\")\n",
+    "    print(f\"Average Precision: {results_df['precision'].mean():.4f}\")\n",
+    "    return results_df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "d2629fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Recommendations:\n",
+      "+-----------------------------------------------+----------+---------------------------------------------------------------------------------------+--------------------+\n",
+      "| Anime                                         |   Rating | genre                                                                                 |   Similarity Score |\n",
+      "|-----------------------------------------------+----------+---------------------------------------------------------------------------------------+--------------------|\n",
+      "| Fullmetal Alchemist: Brotherhood Specials     |     8.11 | ['Adventure', 'Drama', 'Fantasy', 'Magic', 'Military', 'Shounen']                     |           0.948303 |\n",
+      "| Fullmetal Alchemist                           |     8.33 | ['Action', 'Adventure', 'Comedy', 'Drama', 'Fantasy', 'Magic', 'Military', 'Shounen'] |           0.799551 |\n",
+      "| Fullmetal Alchemist: The Sacred Star of Milos |     7.5  | ['Action', 'Adventure', 'Comedy', 'Drama', 'Fantasy', 'Magic', 'Military', 'Shounen'] |           0.799551 |\n",
+      "| Jikuu Tenshou Nazca                           |     5.88 | ['Action', 'Adventure', 'Drama', 'Fantasy', 'Magic']                                  |           0.669094 |\n",
+      "| Lodoss-tou Senki: Eiyuu Kishi Den             |     7.25 | ['Action', 'Adventure', 'Drama', 'Fantasy', 'Magic', 'Romance']                       |           0.57845  |\n",
+      "+-----------------------------------------------+----------+---------------------------------------------------------------------------------------+--------------------+\n",
+      "\n",
+      "Evaluation for 'Fullmetal Alchemist: Brotherhood':\n",
+      "Users who liked this anime: 100\n",
+      "Average Precision: 0.0320\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ======================\n",
+    "# Apply for a Specific Anime Fullmetal Alchemist: Brotherhood\n",
+    "# ======================\n",
+    "\n",
+    "target_anime = \"Fullmetal Alchemist: Brotherhood\"\n",
+    "\n",
+    "recs = get_recommendations(target_anime)\n",
+    "\n",
+    "if not recs.empty:\n",
+    "    print(\"\\nRecommendations:\")\n",
+    "    print(tabulate(recs, headers='keys', tablefmt='psql', showindex=False))\n",
+    "\n",
+    "# Evaluate recommendations on the test set\n",
+    "evaluation_results = evaluate_for_anime(target_anime, test_ratings, train_anime_data, cosine_sim, indices)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d67af56",
+   "id": "912d21b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92d55e91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952ef5b1",
    "metadata": {},
    "outputs": [],
    "source": []
